--- a/src/app/operador/ordenes/ordenes.component.html
+++ b/src/app/operador/ordenes/ordenes.component.html
@@ -5,4 +5,11 @@
   </svg>
   <h2>Listado de órdenes</h2>
 </div>
+
+<div class="tabla">
+
+  <app-tabla-ordenes></app-tabla-ordenes>
+
+</div>
+
 </div>
