--- a/src/app/administrativo/incidencias/incidencias.component.html
+++ b/src/app/administrativo/incidencias/incidencias.component.html
@@ -1,1 +1,15 @@
-<p>incidencias works!</p>
+<div class="contenedor-tabla">
+    <table datatable [dtOptions]="dtOptions" class="table table-hover text-center">
+        <thead>
+          <tr>
+            <th>Código</th>
+            <th>Incidencia</th>
+            <th>Operador</th>
+            <th>Orden Asociada</th>
+          </tr>
+        </thead>
+        <tbody>
+
+        </tbody>
+    </table>
+</div>
