--- a/src/app/log-in/log-in.component.html
+++ b/src/app/log-in/log-in.component.html
@@ -34,7 +34,7 @@
 
               </div>
 
-              <input class="btn btn-dark mt-3 botonLogin" type="submit" value="INICIAR SESIÓN">
+              <input class="btn btn-dark mt-3 botonLogin" type="submit" value="INICIAR SESIÓN" onclick="location.href = '../gestor/usuarios/usuarios.component'">
 
             </form>
           </div>
