--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,4 +1,4 @@
-<div class="menu gestor">
+<div class="col-12 menu gestor">
   <img class="perfil" src="./assets/Gestor/gestor.png" alt="">
   <a class="nav-link d-flex flex-column" routerLink="usuarios"><img class="primeraImg imgMenu" src="./assets/Gestor/usuarios.svg" alt=""></a><br>
   <a class="nav-link d-flex flex-column" routerLink="crear-gruas"><img class="imgMenu" src="./assets/Gestor/crearGruas.svg" alt=""></a><br>
