--- a/src/app/administrativo/monitorizar-orden/monitorizar-orden.component.html
+++ b/src/app/administrativo/monitorizar-orden/monitorizar-orden.component.html
@@ -5,7 +5,7 @@
 <img src="./assets/Administrativo/realizarAuditoriaVer.svg" onclick="location.href = 'administrativo/realizar-auditoria'">Realizar Auditoria
 
 <div class="contenedor-tabla">
-    <table datatable [dtOptions]="dtOptions" class="table table-hover text-center">
+    <table datatable [dtOptions]="dtOptions" class="table table-hover text-center" hidden>
         <thead>
           <tr>
             <th>Fecha creación</th>
