--- a/src/app/menu/menu.component.css
+++ b/src/app/menu/menu.component.css
@@ -1,8 +1,8 @@
 div.menu {
   background: var(--Cinder-800, #133379);
-  width: 110px;
   height: 100%;
   flex-shrink: 0;
+  padding-right: 10px;
 }
 
 div.seleccionado {
