--- a/src/app/operador/ordenes/tabla-ordenes/tabla-ordenes.component.html
+++ b/src/app/operador/ordenes/tabla-ordenes/tabla-ordenes.component.html
@@ -1,6 +1,6 @@
 <div class="contenedor-tabla">
 
-  <table datatable [dtOptions]="dtOptions" class="table table-hover">
+  <table datatable [dtOptions]="dtOptions" class="table">
 
     <thead>
       <tr>
@@ -8,13 +8,11 @@
         <th>Nombre empleado/a</th>
         <th>Estado</th>
       </tr>
+
     </thead>
-    <tbody>
-
-
+    <tbody style="background-color: #F1F5FE; text-align: center;">
 
     </tbody>
-
 
   </table>
 </div>
