--- a/src/app/gestor/usuarios/usuarios.component.css
+++ b/src/app/gestor/usuarios/usuarios.component.css
@@ -101,7 +101,6 @@ table tr {
   font-size: 1em !important;
 }
 
-
 .dt-layout {
   text-align: center;
 }
@@ -174,4 +173,35 @@ table tr {
   height: 30px;
   margin-top: 2px;
   margin-left: -100px;
+}
+
+.dt-scroll-head > .dt-scroll-headInner > table > thead > tr > th {
+  background-color: #152d65;
+  width: 1477px;
+  height: 80px;
+  color: var(--Cinder-50, #f1f5fe);
+  text-align: center;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  padding: 30px;
+  position: sticky;
+}
+
+.dt-scroll > .dt-scroll-body > table > tbody > tr > td {
+  padding: 10px;
+  text-align: center;
+  font-size: 20px;
+}
+
+/* .dt-scroll > .dt-scroll-body > .table-hover {
+  border-bottom: solid 10px var(--Cinder-50, #f1f5fe);
+  border-top: solid 10px var(--Cinder-50, #f1f5fe);
+  border-left: solid 10px var(--Cinder-50, #f1f5fe);
+  border-right: solid 10px var(--Cinder-50, #f1f5fe);
+} */
+
+#DataTables_Table_0 {
+
 }
