--- a/src/app/administrativo/buscar-contenedor/buscar-contenedor.component.html
+++ b/src/app/administrativo/buscar-contenedor/buscar-contenedor.component.html
@@ -1,3 +1,5 @@
+<h2 class="titulo"><img src="./assets/Administrativo/buscarContenedorVer.svg">Crear orden</h2>
+
 <div class="contenedor-tabla">
     <table datatable [dtOptions]="dtOptions" class="table table-hover text-center">
         <thead>
