--- a/src/app/gestor/usuarios/usuarios.component.css
+++ b/src/app/gestor/usuarios/usuarios.component.css
@@ -19,7 +19,6 @@ table {
   max-width: 100%;
   background-color: var(--Cinder-50, #f1f5fe);
   margin: 0 auto;
-  overflow: auto;
   border-collapse: collapse;
 }
 
@@ -35,7 +34,7 @@ table td {
 table th {
   background-color: #152d65;
   width: 1477px;
-  height: 80px;
+  height: 40px;
   color: var(--Cinder-50, #f1f5fe);
   text-align: center;
   font-size: 24px;
@@ -44,6 +43,10 @@ table th {
   line-height: normal;
   padding: 30px;
   position: sticky;
+}
+
+tbody {
+  overflow-y: auto;
 }
 
 table tr {
@@ -66,7 +69,7 @@ table tr {
   display: inline-block;
   vertical-align: middle;
   margin-left: 10px;
-  margin-top: 60px;
+  margin-top: 40px;
   margin-bottom: 80px;
 }
 
@@ -77,16 +80,16 @@ table tr {
   position: relative;
   display: inline-block;
   vertical-align: middle;
-  margin-top: 30px;
+  margin-top: -5px;
   margin-bottom: 40px;
 }
 
 .contenedor-tabla {
   max-height: 600px;
-  overflow-y: auto;
   margin: 0 auto;
   margin-left: 200px;
   width: 1200px;
+  margin-top: -70px;
 }
 
 .dataTables_scrollBody thead tr {
@@ -112,7 +115,8 @@ table tr {
 .crearNuevo {
   display: flex;
   margin-left: 200px;
-  margin-bottom: -48px;
+  margin-bottom: 35px;
+  margin-top: -30px;
 }
 
 .botonCrear {
@@ -133,7 +137,7 @@ table tr {
   border-radius: 4px;
   border: 2px solid rgba(0, 0, 0, 0.5);
   background: rgba(217, 217, 217, 0);
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.5);
+  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0.5);
 }
 
 .botonImagen {
@@ -165,7 +169,7 @@ table tr {
   border-radius: 4px;
   border: 2px solid rgba(0, 0, 0, 0.5);
   background: rgba(217, 217, 217, 0);
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.5);
+  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0.5);
 }
 
 .botonImagen2 {
@@ -181,26 +185,75 @@ table tr {
   height: 80px;
   color: var(--Cinder-50, #f1f5fe);
   text-align: center;
-  font-size: 24px;
+  font-size: 23px;
   font-style: normal;
   font-weight: 700;
   line-height: normal;
-  padding: 30px;
+  padding: 20px;
   position: sticky;
 }
 
 .dt-scroll > .dt-scroll-body > table > tbody > tr > td {
-  padding: 10px;
   text-align: center;
   font-size: 20px;
+  border-bottom: solid 10px var(--Cinder-50, #f1f5fe);
+  padding: 25px;
+}
+
+.dt-scroll > .dt-scroll-body > table > tbody > tr > td:nth-child(1) {
+  text-align: left;
+  padding: 25px;
+  margin-left: -200px;
+}
+
+.dt-scroll > .dt-scroll-body > table > tbody > tr > td:nth-child(2) {
+  text-align: center;
+  padding: 25px;
+  padding-left: 0px;
+  padding-right: 56px;
+}
+
+.dt-scroll > .dt-scroll-body > table > tbody > tr > td:nth-child(3) {
+  text-align: center;
+  padding: 25px;
+  padding-left: 0px;
+}
+
+.dt-scroll > .dt-scroll-body > table > tbody > tr > td > .select-checkbox {
+  margin-left: 25px;
+  margin-right: 65px;
 }
 
 /* .dt-scroll > .dt-scroll-body > .table-hover {
   border-bottom: solid 10px var(--Cinder-50, #f1f5fe);
   border-top: solid 10px var(--Cinder-50, #f1f5fe);
-  border-left: solid 10px var(--Cinder-50, #f1f5fe);
-  border-right: solid 10px var(--Cinder-50, #f1f5fe);
 } */
 
-#DataTables_Table_0 {
+.dt-search > #dt-search-0 {
+  display: flex;
+  padding-left: 39px;
+  align-items: center;
+  width: 199px;
+  height: 35px;
+  border-radius: 4px;
+  border: 2px solid #000;
+  background: rgba(217, 217, 217, 0);
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.5);
+  z-index: 1;
+  margin-left: 78px;
+  margin-top: -9px;
+  padding: 13px;
 }
+
+.dt-search > label {
+  display: flex;
+  margin-top: 35px;
+  margin-bottom: -33px;
+  margin-left: 130px;
+}
+
+/* .dt-search > img {
+  display: flex;
+  margin-left: -10px;
+  margin-right: 300px;
+} */
