--- a/src/app/operador/ordenes/orden/orden.component.html
+++ b/src/app/operador/ordenes/orden/orden.component.html
@@ -1,1 +1,84 @@
-<p>orden works!</p>
+<div class="vh-100">
+
+  <div class="titulo d-flex flex-row align-items-center align-content-center">
+    <div class="volver" (click)="volver()">
+      <svg routerLinkActive="router-link-active"  xmlns="http://www.w3.org/2000/svg" width="78" height="78" viewBox="0 0 78 78" fill="none">
+        <path d="M39 9.75C22.8516 9.75 9.75 22.8516 9.75 39C9.75 55.1484 22.8516 68.25 39 68.25C55.1484 68.25 68.25 55.1484 68.25 39C68.25 22.8516 55.1484 9.75 39 9.75Z" stroke="#040813" stroke-width="3" stroke-miterlimit="10"/>
+        <path d="M45.0937 53.625L30.4688 39L45.0937 24.375" stroke="#040813" stroke-width="5" stroke-linecap="round" stroke-linejoin="round"/>
+      </svg>
+    </div>
+    <h2 id="titulo_rellenar">Orden</h2>
+  </div>
+
+  <div class="todo d-flex flex-column align-items-center align-content-center">
+
+  <div class="cuerpo">
+
+      <div class="superior d-flex flex-row justify-content-between align-content-center align-items-center">
+
+        <div class="detalles-ubicacion d-flex flex-column align-items-center">
+
+          <h2 id="ubi-procedencia"></h2>
+
+          <div class="linea"></div>
+
+          <h2 id="zona-procedencia"></h2>
+
+        </div>
+
+        <svg xmlns="http://www.w3.org/2000/svg" width="155" height="60" viewBox="0 0 155 60" fill="none">
+          <path d="M153.828 32.8284C155.391 31.2663 155.391 28.7337 153.828 27.1716L128.373 1.71573C126.81 0.153631 124.278 0.153631 122.716 1.71573C121.154 3.27783 121.154 5.81049 122.716 7.37258L145.343 30L122.716 52.6274C121.154 54.1895 121.154 56.7222 122.716 58.2843C124.278 59.8464 126.81 59.8464 128.373 58.2843L153.828 32.8284ZM0 34H151V26H0V34Z" fill="#E3E9FB"/>
+          </svg>
+
+        <div class="detalles-ubicacion d-flex flex-column align-items-center">
+
+          <h2 id="ubi-destino"></h2>
+
+          <div class="linea"></div>
+
+          <h2 id="zona-destino"></h2>
+
+        </div>
+
+      </div>
+
+      <div class="botones d-flex flex-row align-items-center align-content-center justify-content-around">
+
+        <button id="por-hacer">POR HACER</button>
+        <button id="en-curso">EN CURSO</button>
+        <button id="finalizada">FINALIZADO</button>
+
+      </div>
+
+    <div (click)="volverAnterior()" class="contenedor-anterior d-flex flex-row">
+
+      <svg xmlns="http://www.w3.org/2000/svg" width="52" height="52" viewBox="0 0 52 52" fill="none">
+        <path d="M25.5488 11.4316L6.61146 24.9802C6.44268 25.1013 6.30511 25.2608 6.21009 25.4455C6.11507 25.6302 6.06532 25.8349 6.06494 26.0426V26.0457C6.06538 26.2542 6.11557 26.4596 6.21135 26.6449C6.30712 26.8301 6.44572 26.9898 6.61562 27.1107L25.553 40.5719C25.7487 40.7112 25.9791 40.7938 26.2187 40.8106C26.4584 40.8274 26.698 40.7777 26.9112 40.6671C27.1247 40.5571 27.3038 40.3904 27.4287 40.1853C27.5535 39.9801 27.6194 39.7445 27.6189 39.5043V33.1692L44.6276 33.1697C44.7994 33.1698 44.9696 33.136 45.1283 33.0702C45.287 33.0045 45.4313 32.9081 45.5527 32.7866C45.6742 32.6651 45.7705 32.5209 45.8362 32.3621C45.9018 32.2033 45.9356 32.0332 45.9354 31.8614L45.9349 20.1401C45.935 19.9682 45.9012 19.7981 45.8355 19.6393C45.7697 19.4805 45.6734 19.3363 45.5519 19.2148C45.4304 19.0933 45.2861 18.9969 45.1273 18.9312C44.9686 18.8655 44.7984 18.8317 44.6266 18.8317H27.6195V12.495C27.6195 12.0062 27.3439 11.5575 26.9086 11.3318C26.6948 11.2215 26.4546 11.1724 26.2147 11.19C25.9747 11.2076 25.7443 11.2913 25.5488 11.4316Z" fill="#152D65"/>
+      </svg>
+      <p>Contenedor anterior</p>
+
+    </div>
+
+
+  </div>
+
+  <div id="fondo" hidden class="fondo-transparente align-items-center align-content-center justify-content-between">
+
+    <div class="finalizar-orden d-flex flex-column align-items-center align-content-center justify-content-around">
+
+      <p>¿Estás seguro de que quieres finalizar la órden?</p>
+
+      <div class="botones-fin-orden d-flex flex-row align-items-center align-content-center justify-content-around">
+
+        <button id="cancelar">Cancelar</button>
+
+        <button id="finalizar">Finalizar</button>
+
+      </div>
+
+    </div>
+
+  </div>
+
+</div>
+</div>
