--- a/src/app/operador/ordenes/tabla-ordenes/tabla-ordenes.component.html
+++ b/src/app/operador/ordenes/tabla-ordenes/tabla-ordenes.component.html
@@ -4,13 +4,13 @@
 
     <thead>
       <tr>
-        <th>Cargo</th>
-        <th>Nombre empleado/a</th>
-        <th>Estado</th>
+        <th>Tipo de orden</th>
+        <th>Buque</th>
+        <th>Cantidad de contenedores</th>
       </tr>
 
     </thead>
-    
+
     <tbody>
 
     </tbody>
