--- a/src/app/administrativo/monitorizar-orden/monitorizar-orden.component.html
+++ b/src/app/administrativo/monitorizar-orden/monitorizar-orden.component.html
@@ -5,16 +5,16 @@
 <img src="./assets/Administrativo/realizarAuditoriaVer.svg" onclick="location.href = 'administrativo/realizar-auditoria'">Realizar Auditoria
 
 <div class="contenedor-tabla">
-    <table datatable [dtOptions]="dtOptions" class="table table-hover text-center" hidden>
-        <thead>
-          <tr>
-            <th>Fecha creación</th>
-            <th>Orden</th>
-            <th>Estado</th>
-          </tr>
-        </thead>
-        <tbody>
+  <table datatable [dtOptions]="dtOptions" class="table table-hover text-center">
+      <thead>
+        <tr>
+          <th></th>
+          <th></th>
+          <th></th>
+        </tr>
+      </thead>
+      <tbody>
 
-        </tbody>
-    </table>
+      </tbody>
+  </table>
 </div>
