--- a/src/app/operador/ordenes/orden/orden.component.css
+++ b/src/app/operador/ordenes/orden/orden.component.css
@@ -16,7 +16,7 @@
 .cuerpo{
 
   width: 85%;
-  height: 100%;
+  height: 88%;
   margin: 0;
 }
 
@@ -49,7 +49,8 @@
 
     background-color: #133379;
     color: #f1f5fe;
-    padding: 10px;
+    padding: 5px;
+    position: relative;
 
 }
 
@@ -98,10 +99,10 @@
 .botones > button{
 
   width: 32%;
-  height: 43%;
-  padding: 0px 74px 0px 90px;
-  justify-content: flex-end;
+  height: 60%;
+  padding: 0px 30px 0px 40px;
   align-items: center;
+  text-align: center;
   flex-shrink: 0;
   background: var(--Cinder-300, #89ADF0);
   box-shadow: 4px 12px 13px 0px rgba(0, 0, 0, 0.25);
@@ -112,6 +113,31 @@
   line-height: normal;
   border: none;
 
+}
+
+.bloqueInidencia{
+
+  width: 70px;
+  height: 70px;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  padding: 10px;
+  margin: 10px;
+  border-radius: 10px;
+  background: #F3C715;
+}
+
+.bloqueInidencia > a {
+
+  background: none;
+}
+
+.bloqueInidencia > svg{
+
+  padding: 3px;
+  margin: 0;
+  background-color: #F3C715;
 }
 
 .volver > svg{
