--- a/src/app/gestor/gestionar-gruas/gestionar-gruas.component.html
+++ b/src/app/gestor/gestionar-gruas/gestionar-gruas.component.html
@@ -1,1 +1,80 @@
-<p>gestionar-gruas works!</p>
+<h1><img src="assets/Gestor/crearPatioVer.png" alt="Crear Patio">  Crear Patio | Zona</h1>
+             <form action="" method="post">
+
+
+                <div class="div1">
+                    <h2 class="num">1</h2>
+                    <h2>Nombre</h2>
+                    <label for="name">Nombre</label>
+                    <input type="text" id="name" name="nombre">
+
+
+                </div>
+                <div class="div2">
+                    <h2 class="num">2</h2>
+                    <h2>Dimensiones</h2>
+                    <label for="valorX">Valor X:</label>
+                    <input type="number" name="x" id="valorX">
+                    <label for="valorY">Valor Y:</label>
+                    <input type="number" name="y" id="valorY">
+                    <label for="valorZ">Valor Z:</label>
+                    <input type="number" name="z" id="valorZ">
+
+                </div>
+
+
+
+                <button type="submit" class="anyadirPatio btn btn-primary">Añadir</button>
+
+            </form>
+
+            <form action="" method="post">
+
+                <div class="div3">
+                    <h2 class="num">3</h2>
+                    <h2>Zonas</h2>
+                    <label for="nombre">Nombre</label>
+                    <input type="text" name="nombre" id="nombre">
+
+                    <div class="flex-row d-flex justify-content-between" id="valores">
+                        <div class="d-flex flex-column justify-content-center">
+                            <label class="d-flex justify-content-center" for="valX">Valor X:</label>
+                            <input type="number" class="valX" name="X" id="valX">
+                        </div>
+
+                        <div class="d-flex flex-column">
+                            <label class="d-flex justify-content-center" for="valY">Valor Y:</label>
+                            <input type="number" name="Y" id="valY">
+                        </div>
+
+                        <div class="d-flex flex-column">
+                            <label class="d-flex justify-content-center" for="valZ">Valor Z:</label>
+                            <input type="number" name="Z" id="valZ">
+                        </div>
+                </div>
+
+
+                    </div>
+                </form>
+
+                <div id="tabla">
+                <table id="zona" class="table table-bordered">
+                        <thead>
+                                <tr>
+                                    <th>Nombre</th>
+                                    <th>X</th>
+                                    <th>Y</th>
+                                    <th>Z</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+
+                            </tbody>
+                </table>
+                </div>
+
+
+
+                <a class="crear btn btn-primary">Aceptar</a>
+
+                <a class="cancelar btn btn-warning">Cancelar</a>
