--- a/src/app/gestor/gestionar-gruas/gestionar-gruas.component.css
+++ b/src/app/gestor/gestionar-gruas/gestionar-gruas.component.css
@@ -1,4 +1,4 @@
-#zona table{
+/* #zona table{
 
     margin-top: 40%;
 
@@ -242,4 +242,4 @@ input{
 #valores>div>input {
     width: 80px;
 
-}
+} */
