--- a/src/app/administrativo/auditorias/realizar-auditoria/realizar-auditoria.component.html
+++ b/src/app/administrativo/auditorias/realizar-auditoria/realizar-auditoria.component.html
@@ -1,14 +1,1 @@
-<div class="contenedor-tabla">
-    <table datatable [dtOptions]="dtOptions" class="table table-hover text-center">
-        <thead>
-          <tr>
-            <th>Código</th>
-            <th>Orden Asociada</th>
-            <th>Estado</th>
-          </tr>
-        </thead>
-        <tbody>
-
-        </tbody>
-    </table>
-</div>
+Realizar audiotria works!
