--- a/src/app/administrativo/buscar-contenedor/buscar-contenedor.component.html
+++ b/src/app/administrativo/buscar-contenedor/buscar-contenedor.component.html
@@ -1,4 +1,4 @@
-<h2 class="titulo"><img src="./assets/Administrativo/buscarContenedorVer.svg">Crear orden</h2>
+<h2 class="titulo"><img src="./assets/Administrativo/buscarContenedorVer.svg">  Buscar contenedor</h2>
 
 <div class="contenedor-tabla">
     <table datatable [dtOptions]="dtOptions" class="table table-hover text-center">
