--- a/src/app/administrativo/incidencias/incidencias.component.html
+++ b/src/app/administrativo/incidencias/incidencias.component.html
@@ -1,3 +1,5 @@
+<h2 class="titulo"><img src="./assets/Administrativo/incidenciasVer.svg">  Incidencias</h2>
+
 <div class="contenedor-tabla">
     <table datatable [dtOptions]="dtOptions" class="table table-hover text-center">
         <thead>
