--- a/src/app/menu/menu.component.css
+++ b/src/app/menu/menu.component.css
@@ -1,6 +1,6 @@
 div.menu {
   background: var(--Cinder-800, #133379);
-  height: 100%;
+  height: 100vh;
   flex-shrink: 0;
   padding-right: 10px;
 }
@@ -42,8 +42,8 @@ div.seleccionado {
   width: 56px;
   height: 50px;
   flex-shrink: 0;
-  position: relative;
-  margin-top: 250%;
+  position: absolute;
+  bottom: 0px;
 }
 
 .perfil {
