--- a/src/app/perfil-ordenador/perfil-ordenador.component.html
+++ b/src/app/perfil-ordenador/perfil-ordenador.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<!-- <div class="container">
     <h2>👤 Ver perfil</h2>
     <div class="profile-card">
       <img [src]="'https://via.placeholder.com/100'" class="avatar" />
@@ -14,4 +14,4 @@
       </div>
       <button class="logout-btn">Cerrar Sesión</button>
     </div>
-  </div>
+  </div> -->
