--- a/src/app/gestor/usuarios/usuarios.component.html
+++ b/src/app/gestor/usuarios/usuarios.component.html
@@ -2,10 +2,10 @@
 
 <div class="crearNuevo">
   <button type="submit" class="btn btn-info botonCrear" onclick="location.href = 'gestor/crear-usuario'">Crear</button>
-  <img src="./assets/Gestor/usuariosCrear.svg" class="botonImagen">
+  <img src="./assets/Gestor/usuariosCrear.svg" class="botonImagen" alt="Crear usuario">
 
   <button type="submit" class="btn btn-info botonEliminar" onclick="location.href = 'gestor/eliminar-usuario'">Eliminar</button>
-  <img src="./assets/Gestor/binNegra.svg" class="botonImagen2">
+  <img src="./assets/Gestor/binNegra.svg" class="botonImagen2" alt="Eliminar usuario" title="Eliminar usuario">
 
 </div>
 
