--- a/src/app/administrativo/incidencias/incidencias.component.css
+++ b/src/app/administrativo/incidencias/incidencias.component.css
@@ -158,3 +158,51 @@ table tr {
   margin-left: 25px;
   margin-right: 65px;
 }
+
+/* Modales */
+::ng-deep div.swal2-popup {
+  border-radius: 32px;
+  border: 2px solid #000;
+
+  background: #FFFCFC;
+
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.50);
+}
+
+::ng-deep h2.swal2-title {
+  color: var(--Cinder-950, #040813);
+  border-bottom: solid 2px black;
+
+  padding-bottom: 4%;
+  margin-bottom: -4%;
+
+  text-align: left;
+}
+
+::ng-deep div.swal2-html-container > h3 {
+  color: var(--Cinder-900, #152D65);
+
+  text-align: left;
+  margin-top: 4%;
+  margin-left: 1%;
+}
+::ng-deep div.swal2-html-container > input {
+  color: black;
+  background: var(--Cinder-50, #F1F5FE);
+  border: none;
+
+  padding-left: 10px;
+  margin-left: -51%;
+}
+
+::ng-deep div.swal2-html-container > textarea {
+  width: 100%;
+  height: 80px;
+  
+  color: black;
+  background: var(--Cinder-50, #F1F5FE);
+  border: none;
+
+  padding-left: 0px;
+  resize: none;
+}
