Actualizar orden workea bien

--- a/src/app/administrativo/buscar-contenedor/buscar-contenedor.component.html
+++ b/src/app/administrativo/buscar-contenedor/buscar-contenedor.component.html
@@ -5,8 +5,8 @@
         <thead>
           <tr>
             <th>Código contenedor</th>
-            <th>Ubicación actual</th>
-            <th>Destino</th>
+            <!-- <th>Ubicación actual</th>
+            <th>Destino</th> -->
             <th>Estado</th>
           </tr>
         </thead>
