--- a/src/app/administrativo/buscar-contenedor/buscar-contenedor.component.css
+++ b/src/app/administrativo/buscar-contenedor/buscar-contenedor.component.css
@@ -17,7 +17,7 @@
 
 table {
   width: 100%;
-  max-width: 1200px;
+  max-width: 1000px;
   background-color: var(--Cinder-50, #f1f5fe);
   margin: 0 auto;
   overflow: auto;
@@ -35,7 +35,7 @@ table td {
 
 table th {
   background-color: #152d65;
-  width: 1477px;
+  width: 100%;
   height: 80px;
   color: var(--Cinder-50, #f1f5fe);
   text-align: center;
@@ -47,12 +47,8 @@ table th {
   position: sticky;
 }
 
-table tr {
-  text-align: center;
-  font-size: 24px;
-  font-style: normal;
-  font-weight: 300;
-  line-height: normal;
+::ng-deep td.dt-type-numeric {
+  text-align: center !important;
 }
 
 .tituloSecc {
@@ -85,8 +81,8 @@ table tr {
 .contenedor-tabla {
   max-height: 600px;
   margin: 0 auto;
-  margin-left: 200px;
-  width: 1200px;
+  margin-left: 350px;
+  width: 1000px;
   margin-top: 6%;
 }
 
@@ -157,4 +153,71 @@ table tr {
 .dt-scroll > .dt-scroll-body > table > tbody > tr > td > .select-checkbox {
   margin-left: 25px;
   margin-right: 65px;
+}
+
+/* Modales */
+::ng-deep div.swal2-popup {
+  border-radius: 32px;
+  border: 2px solid #000;
+
+  background: #FFFCFC;
+
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.50);
+}
+
+::ng-deep h2.swal2-title {
+  color: var(--Cinder-950, #040813);
+  border-bottom: solid 2px black;
+
+  padding-bottom: 4%;
+  margin-bottom: -4%;
+
+  text-align: left;
+}
+
+::ng-deep div.swal2-html-container > h3 {
+  color: var(--Cinder-900, #152D65);
+
+  text-align: left;
+  margin-top: 4%;
+  margin-left: 1%;
+}
+::ng-deep div.swal2-html-container > input {
+  color: black;
+  background: var(--Cinder-50, #F1F5FE);
+  border: none;
+
+  padding-left: 10px;
+  margin-left: -51%;
+}
+
+::ng-deep div.swal2-html-container > textarea {
+  width: 100%;
+  height: 80px;
+  
+  color: black;
+  background: var(--Cinder-50, #F1F5FE);
+  border: none;
+
+  padding-left: 0px;
+  resize: none;
+}
+
+::ng-deep .swal2-confirm {
+  width: 400px;
+
+  border-radius: 4px;
+  border: 2px solid var(--Cinder-900, #152D65);
+  background: var(--Cinder-900, #152D65);
+  box-shadow: 3px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
+
+::ng-deep div.swal2-html-container > input.Por.empezar {
+  background-color: var(--Rojo, #FF6F6F);;
+}
+::ng-deep div.swal2-html-container > input.En.curso {
+  background-color: var(--Amarillo-3, #FACD84);;
+}
+::ng-deep div.swal2-html-container > input.Completada {
+  background-color: var(--Verde, #B8FFB5);;
 }
