--- a/src/app/administrativo/incidencias/incidencias.component.css
+++ b/src/app/administrativo/incidencias/incidencias.component.css
@@ -206,3 +206,15 @@ table tr {
   padding-left: 0px;
   resize: none;
 }
+
+::ng-deep .swal2-styled {
+  width: 200px;
+  
+  border-radius: 4px;
+  border: 2px solid var(--Cinder-900, #152D65);
+  background: var(--Amarillo, #E59506);
+  box-shadow: 3px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
+::ng-deep .swal2-confirm {
+  background: var(--Cinder-900, #152D65);
+}
