--- a/src/app/administrativo/monitorizar-orden/monitorizar-orden.component.css
+++ b/src/app/administrativo/monitorizar-orden/monitorizar-orden.component.css
@@ -149,38 +149,6 @@ table tr {
   margin-left: -90px;
 }
 
-/* .botonImagen:hover {
-  opacity: 20;
-} */
-
-.botonEliminar {
-  display: flex;
-  padding-left: 39px;
-  align-items: center;
-  width: 112px;
-  height: 35px;
-  border-radius: 4px;
-  border: 2px solid #000;
-  background: rgba(217, 217, 217, 0);
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.5);
-  z-index: 1;
-  margin-left: 80px;
-}
-
-.botonEliminar:hover {
-  border-radius: 4px;
-  border: 2px solid rgba(0, 0, 0, 0.5);
-  background: rgba(217, 217, 217, 0);
-  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0.5);
-}
-
-.botonImagen2 {
-  width: 22px;
-  height: 30px;
-  margin-top: 2px;
-  margin-left: -100px;
-}
-
 .botonAuditoria {
   display: flex;
   padding-left: 39px;
@@ -252,4 +220,73 @@ table tr {
 .dt-scroll > .dt-scroll-body > table > tbody > tr > td > .select-checkbox {
   margin-left: 25px;
   margin-right: 65px;
+}
+
+
+
+/* Modales */
+::ng-deep div.swal2-popup {
+  border-radius: 32px;
+  border: 2px solid #000;
+
+  background: #FFFCFC;
+
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.50);
+}
+
+::ng-deep h2.swal2-title {
+  color: var(--Cinder-950, #040813);
+  border-bottom: solid 2px black;
+
+  padding-bottom: 4%;
+  margin-bottom: -4%;
+
+  text-align: left;
+}
+
+::ng-deep div.swal2-html-container > h3 {
+  color: var(--Cinder-900, #152D65);
+
+  text-align: left;
+  margin-top: 4%;
+  margin-left: 1%;
+}
+::ng-deep div.swal2-html-container > input {
+  color: black;
+  background: var(--Cinder-50, #F1F5FE);
+  border: none;
+
+  padding-left: 10px;
+  margin-left: -51%;
+}
+
+::ng-deep .swal2-confirm {
+  width: 400px;
+
+  border-radius: 4px;
+  border: 2px solid var(--Cinder-900, #152D65);
+  background: var(--Cinder-900, #152D65);
+  box-shadow: 3px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
+
+::ng-deep div.swal2-html-container > input.Por.empezar {
+  background-color: var(--Rojo, #FF6F6F);;
+}
+::ng-deep div.swal2-html-container > input.En.curso {
+  background-color: var(--Amarillo-3, #FACD84);;
+}
+::ng-deep div.swal2-html-container > input.Completada {
+  background-color: var(--Verde, #B8FFB5);;
+}
+
+::ng-deep .swal2-styled {
+  width: 200px;
+  
+  border-radius: 4px;
+  border: 2px solid var(--Cinder-900, #152D65);
+  background: var(--Amarillo, #E59506);
+  box-shadow: 3px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
+::ng-deep .swal2-confirm {
+  background: var(--Cinder-900, #152D65);
 }
