--- a/src/app/log-in/log-in.component.html
+++ b/src/app/log-in/log-in.component.html
@@ -29,7 +29,7 @@
 
               <div class="form-check d-flex align-items-center recordarForm">
 
-              <input class="form-check-input me-2 recordarCheck" id="recordar" type="checkbox" name="">
+              <!-- <input class="form-check-input me-2 recordarCheck" id="recordar" type="checkbox" name=""> -->
               <label class="recordarUser form-check-label" for="recordar">Recordar usuario</label>
 
               </div>
