--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,20 +1,31 @@
+
+
 @if (rol == 'gestor') {
-  <div class="col-12 menu">
-    <a routerLink="perfil-ordenador">
-    <img class="perfil" src="./assets/Gestor/gestor.png" alt="">
-    </a>
-    <a class="nav-link d-flex flex-column" routerLink="usuarios"><img class="primeraImg imgMenu" src="./assets/Gestor/usuarios.svg" alt=""></a><br>
-    <a class="nav-link d-flex flex-column" routerLink="crear-gruas"><img class="imgMenu" src="./assets/Gestor/crearGruas.svg" alt=""></a><br>
-    <a class="nav-link d-flex flex-column" routerLink="crear-patio"><img class="imgMenu" src="./assets/Gestor/crearPatio.png" alt=""></a><br>
-    <a class="nav-link d-flex flex-column" routerLink="gestionar-gruas"><img class="imgMenu" src="./assets/Gestor/gestionarGruas.svg" alt=""></a><br>
+  <div>
+    <div class="col-12 menu">
+      <a id="perfil" routerLink="/perfil-ordenador">
+      <img class="perfil" src="./assets/Gestor/gestor.png" alt="">
+      </a>
+      <a class="nav-link d-flex flex-column" routerLink="usuarios"><img class="primeraImg imgMenu" src="./assets/Gestor/usuariosCrearVer.svg" alt=""><span>Crear Usuario</span></a><br>
+      <a class="nav-link d-flex flex-column" routerLink="usuarios"><img class="imgMenu" src="./assets/Gestor/usuarios.svg" alt=""><span>Ver usuarios</span></a><br>
+      <a class="nav-link d-flex flex-column" routerLink="crear-gruas"><img class="imgMenu" src="./assets/Gestor/crearGruas.svg" alt=""><span>Crear Grua</span></a><br>
+      <a class="nav-link d-flex flex-column" routerLink="crear-patio"><img class="imgMenu" src="./assets/Gestor/crearPatio.png" alt=""><span>Crear Patio</span></a><br>
+      <a class="nav-link d-flex flex-column" routerLink="gestionar-gruas"><img class="imgMenu" src="./assets/Gestor/gestionarGruas.svg" alt=""><span>Gestionar Gruas</span></a><br>
+
+      <a class="home" (click)="logout()">
+        <img src="./assets/home.svg" alt="Cerrar sesión">
+      </a>
+
+    </div>
+
   </div>
 }
 @if (rol == 'administrativo') {
   <div class="menu">
-    <a routerLink="perfil-ordenador">
+    <a routerLink="/perfil-ordenador">
     <img class="perfil" src="./assets/Administrativo/perfil.svg" alt="">
     </a>
-    <a class="nav-link d-flex flex-column" routerLink="crear-orden"><img class="primeraImg imgMenu" src="./assets/Administrativo/crearOrden.svg" alt=""></a><br>
+    <a class="nav-link d-flex flex-column" routerLink="crear-orden"><img class="primeraImg imgMenu" src="./assets/Administrativo/crearOrden.svg" alt=""><span>Crear Orden</span></a><br>
     <a class="nav-link d-flex flex-column" routerLink="crear-turno"><img class="imgMenu" src="./assets/Administrativo/crearTurno.svg" alt=""></a><br>
     <a class="nav-link d-flex flex-column" routerLink="monitorizar-orden"><img class="imgMenu" src="./assets/Administrativo/monitorizarOrden.svg" alt=""></a><br>
     <a class="nav-link d-flex flex-column" routerLink="buscar-contenedor"><img class="imgMenu" src="./assets/Administrativo/buscarContenedor.svg" alt=""></a><br>
@@ -22,4 +33,6 @@
     <a class="nav-link d-flex flex-column" routerLink="incidencias"><img class="imgMenu" src="./assets/Administrativo/incidencias.svg" alt=""></a><br>
   </div>
 }
-<img class="home imgMenu" src="./assets/home.svg" (click)="logout()" title="Home">
+
+
+
