--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -6,10 +6,10 @@
       <a id="perfil" routerLink="/perfil-ordenador">
       <img class="perfil" src="./assets/Gestor/gestor.png" alt="">
       </a>
-      <a class="nav-link d-flex flex-column" routerLink="usuarios"><img class="primeraImg imgMenu" src="./assets/Gestor/usuariosCrearVer.svg" alt=""><span>Crear Usuario</span></a><br>
+      <a class="nav-link d-flex flex-column"><img class="primeraImg imgMenu" src="./assets/Gestor/usuariosCrearVer.svg" alt=""><span>Crear Usuario</span></a><br>
       <a class="nav-link d-flex flex-column" routerLink="usuarios"><img class="imgMenu" src="./assets/Gestor/usuarios.svg" alt=""><span>Ver usuarios</span></a><br>
-      <a class="nav-link d-flex flex-column" routerLink="crear-gruas"><img class="imgMenu" src="./assets/Gestor/crearGruas.svg" alt=""><span>Crear Grua</span></a><br>
-      <a class="nav-link d-flex flex-column" routerLink="crear-patio"><img class="imgMenu" src="./assets/Gestor/crearPatio.png" alt=""><span>Crear Patio</span></a><br>
+      <a class="nav-link d-flex flex-column"><img class="imgMenu" src="./assets/Gestor/crearGruas.svg" alt=""><span>Crear Grua</span></a><br>
+      <a class="nav-link d-flex flex-column"><img class="imgMenu" src="./assets/Gestor/crearPatio.png" alt=""><span>Crear Patio</span></a><br>
       <a class="nav-link d-flex flex-column" routerLink="gestionar-gruas"><img class="imgMenu" src="./assets/Gestor/gestionarGruas.svg" alt=""><span>Gestionar Gruas</span></a><br>
 
       <a class="home" (click)="logout()">
