--- a/src/app/gestor/gestionar-gruas/gestionar-gruas.component.css
+++ b/src/app/gestor/gestionar-gruas/gestionar-gruas.component.css
@@ -157,3 +157,69 @@ input{
     margin-top: -5px;
     margin-bottom: 40px;
   }
+
+  ::ng-deep div.swal2-popup {
+    border-radius: 32px;
+    border: 2px solid #000;
+  
+    background: #FFFCFC;
+  
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.50);
+  }
+  
+  ::ng-deep h2.swal2-title {
+    color: var(--Cinder-950, #040813);
+    border-bottom: solid 2px black;
+  
+    padding-bottom: 4%;
+    margin-bottom: -4%;
+  
+    text-align: left;
+  }
+  
+  ::ng-deep div.swal2-html-container > h3 {
+    color: var(--Cinder-900, #152D65);
+  
+    text-align: left;
+    margin-top: 4%;
+    margin-left: 1%;
+  }
+  ::ng-deep div.swal2-html-container > input {
+    color: black;
+    background: var(--Cinder-50, #F1F5FE);
+    border: none;
+  
+    padding-left: 10px;
+    margin-left: -51%;
+  }
+  
+  ::ng-deep div.swal2-html-container > textarea {
+    width: 100%;
+    height: 80px;
+    
+    color: black;
+    background: var(--Cinder-50, #F1F5FE);
+    border: none;
+  
+    padding-left: 0px;
+    resize: none;
+  }
+  
+  ::ng-deep .swal2-confirm {
+    width: 400px;
+  
+    border-radius: 4px;
+    border: 2px solid var(--Cinder-900, #152D65);
+    background: var(--Cinder-900, #152D65);
+    box-shadow: 3px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  }
+  
+  ::ng-deep div.swal2-html-container > input.Por.empezar {
+    background-color: var(--Rojo, #FF6F6F);;
+  }
+  ::ng-deep div.swal2-html-container > input.En.curso {
+    background-color: var(--Amarillo-3, #FACD84);;
+  }
+  ::ng-deep div.swal2-html-container > input.Completada {
+    background-color: var(--Verde, #B8FFB5);;
+  }
