--- a/src/app/gestor/usuarios/usuarios.component.html
+++ b/src/app/gestor/usuarios/usuarios.component.html
@@ -4,8 +4,12 @@
   <button type="submit" class="btn btn-info botonCrear" onclick="location.href = 'gestor/crear-usuario'">Crear</button>
   <img src="./assets/Gestor/usuariosCrear.svg" class="botonImagen" alt="Crear usuario">
 
-  <button type="submit" class="btn btn-info botonEliminar" onclick="location.href = 'gestor/eliminar-usuario'">Eliminar</button>
-  <img src="./assets/Gestor/binNegra.svg" class="botonImagen2" alt="Eliminar usuario" title="Eliminar usuario">
+  <button type="button" class="btn btn-info botonEliminar" (click)="modificarEstado()">
+    Cambiar estado
+  </button>
+  <img src="./assets/Gestor/actualizar.png" class="botonImagen2" alt="Modificar estado">
+  <button type="button" class="btn btn-info botonFiltrar" (click)="abrirFiltro()">Filtrar</button>
+  <img src="./assets/vector.svg" class="botonImagen3" alt="Filtrar">
 
 </div>
 
