--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -31,6 +31,11 @@
     <a class="nav-link d-flex flex-column" routerLink="buscar-contenedor"><img class="imgMenu" src="./assets/Administrativo/buscarContenedor.svg" alt=""></a><br>
     <a class="nav-link d-flex flex-column" routerLink="realizar-auditoria"><img class="imgMenu" src="./assets/Administrativo/realizarAuditoria.svg" alt=""></a><br>
     <a class="nav-link d-flex flex-column" routerLink="incidencias"><img class="imgMenu" src="./assets/Administrativo/incidencias.svg" alt=""></a><br>
+
+    <a class="home" (click)="logout()">
+      <img src="./assets/home.svg" alt="Cerrar sesión">
+    </a>
+
   </div>
 }
 
