--- a/src/app/gestor/usuarios/usuarios.component.css
+++ b/src/app/gestor/usuarios/usuarios.component.css
@@ -120,6 +120,7 @@ div.dt-search input {
   background-image: url('/assets/lupa.svg') !important;
   background-repeat: no-repeat;
   background-position: left 10px center !important; /* Adjust the position of the icon */
+  padding-left: 70px !important;
 }
 
 input#dt-search-0.dt-input {
@@ -295,29 +296,126 @@ input#dt-search-0.dt-input {
 .mi-popup {
   border-radius: 32px;
   border: 2px solid #000;
-
   background: #FFFCFC;
-
+  width: 650px;
+  
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.50);
+  
+}
+
+.misCosas2{
+
+  margin-top: 40px;
+  margin-left: 30px;
+  text-align: left;
+  height: 600px;
+  
+}
+
+
+.misCosas2 > p>span{
+
+  color: var(--Cinder-900, #152D65);
+  text-align: center;
+  font-size: 29px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  margin-bottom: 30px;
+  margin-left: -14px;
+
+}
+
+.misCosas2 > label>span{
+
+  color: #000;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: normal;
+
+}
+
+.misCosas2 > .div1>label{
+
+  margin-bottom: 5px;
+
+}
+
+.misCosas2 > .div2>label{
+
+  margin-bottom: 5px;
+
+}
+
+.misCosas2>.div1  {
+
+
+  position: absolute;
+  left: 7%;
+  top: 25%;
+
+}
+
+.misCosas2>.div2 {
+
+  position: absolute;
+  left: 53%;
+  top: 25%;
+}
+
+.misCosas2>.div1>input  {
+
+  margin-left: 0px;
+  border: none;
+  margin-bottom: 10px;
+  margin-top: 0px;
+  width: 265.205px;
+  height: 53.297px;
+  flex-shrink: 0;
+  background: var(--Cinder-50, #F1F5FE);
+
+}
+
+.misCosas2>.div2>input  {
+
+  margin-left: 0px;
+  border: none;
+  margin-bottom: 10px;
+  margin-top: 0px;
+  width: 265.205px;
+  height: 53.297px;
+  flex-shrink: 0;
+  background: var(--Cinder-50, #F1F5FE);
+
 }
 
 .mi-titulo {
   color: var(--Cinder-950, #040813);
   border-bottom: solid 2px black;
-
   padding-bottom: 4%;
   margin-bottom: -4%;
-
   text-align: center;
+  font-size: 38px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  text-align: left;
 }
 
 .mi-boton {
-  width: 300px;
-
+  width: 570px;
+  margin-top: -75px;
   border-radius: 4px;
   border: 2px solid var(--Cinder-900, #152D65);
   background: var(--Cinder-900, #152D65);
   box-shadow: 3px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  color: var(--Cinder-50, #F1F5FE);
+  text-align: center;
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
 }
 
 .mi-boton:hover {
@@ -404,3 +502,176 @@ input#dt-search-0.dt-input {
   padding-top: 27px;
 
 }
+
+/* TERCER POPUP */
+
+.mi-popup3{
+
+  border-radius: 32px;
+  border: 2px solid #000;
+  width: 500px;
+  background: #FFFCFC;
+
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.50);
+
+} 
+
+.misCosas3{
+
+  margin-top: 40px;
+  text-align: left;
+  
+}
+
+div#swal2-html-container.swal2-html-container.misCosas3{
+
+  color:  var(--Cinder-900, #152D65) ;
+  margin-left: 33px;
+  color: var(--Cinder-900, #152D65);
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+
+}
+
+select#swal2-select.swal2-select{
+
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    background: url('/assets/flecha.svg') no-repeat calc(100% - 3%) var(--Cinder-100, #E3E9FB) !important;
+    border: none;
+    font-size: 1.2rem;
+    display: flex;
+    width: 365px;
+    height: 49px;
+    padding-left: 2%;
+    justify-content: flex-end;
+    align-items: center;
+    flex-shrink: 0;
+    margin-left: 66px;
+
+}
+
+.mi-titulo3 {
+  color: var(--Cinder-950, #040813);
+  border-bottom: solid 2px black;
+
+  padding-bottom: 4%;
+  margin-bottom: -4%;
+
+  text-align: left;
+}
+
+.mi-boton3 {
+  width: 370px;
+
+  border-radius: 4px;
+  border: 2px solid var(--Cinder-900, #152D65);
+  background: var(--Cinder-900, #152D65);
+  box-shadow: 3px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  color: var(--Cinder-50, #F1F5FE);
+  text-align: center;
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+
+.mi-cruz3{
+
+  color: #040813;
+  margin-right: 40px;
+  padding-top: 27px;
+
+}
+
+.mi-cruz2{
+
+  color: #040813;
+  margin-right: 40px;
+  padding-top: 27px;
+
+}
+
+/* Estilo para el Popup de Warning */
+
+div.swal2-popup.swal2-modal.swal2-icon-warning.swal2-show {
+  border-radius: 32px !important;
+  border: 2px solid #000 !important;
+  width: 500px !important;
+  background: #FFFCFC !important;
+
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.50) !important;
+}
+
+.misCosas-warning {
+  margin-top: 20px;
+  text-align: left;
+}
+
+h2#swal2-title.swal2-title{
+  color: #000 !important;
+font-size: 28px;
+font-style: normal;
+font-weight: 400;
+line-height: normal;
+}
+
+button.swal2-confirm.swal2-styled {
+  width: 370px;
+
+  border-radius: 4px;
+  border: 2px solid var(--Cinder-900, #152D65);
+  background: var(--Cinder-900, #152D65);
+  box-shadow: 3px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  color: var(--Cinder-50, #F1F5FE);
+  text-align: center;
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+
+
+/* Estilo para el Popup de Success */
+.mi-popup-success {
+  border-radius: 32px;
+  border: 2px solid #000;
+  width: 500px;
+  background: #FFFCFC;
+
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.50);
+}
+
+.misCosas-success {
+  margin-top: 20px;
+  text-align: left;
+}
+
+.mi-titulo-success {
+  color: #000;
+font-size: 28px;
+font-style: normal;
+font-weight: 400;
+line-height: normal;
+}
+
+.mi-boton-success {
+  width: 370px;
+
+  border-radius: 4px;
+  border: 2px solid var(--Cinder-900, #152D65);
+  background: var(--Cinder-900, #152D65);
+  box-shadow: 3px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  color: var(--Cinder-50, #F1F5FE);
+  text-align: center;
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+
+
+
