--- a/src/app/administrativo/monitorizar-orden/monitorizar-orden.component.html
+++ b/src/app/administrativo/monitorizar-orden/monitorizar-orden.component.html
@@ -1,11 +1,14 @@
-<img src="./assets/Administrativo/monitorizarOrdenVer.svg"><p class="tituloSecc">Monitorizar Orden</p>
+<img class="imgPag" src="./assets/Administrativo/monitorizarOrdenVer.png"><p class="tituloSecc">Monitorizar Orden</p>
 
 <div class="crearNuevo">
   <button type="submit" class="btn btn-info botonCrear" onclick="location.href = 'administrativo/crear-orden'">Crear</button>
   <img src="./assets/Administrativo/crearOrdenVer.svg" class="botonImagen">
 
-  <button type="submit" class="btn btn-info botonAuditoria" onclick="location.href = ''">Auditoria</button>
+  <button type="submit" class="btn btn-info botonAuditoria">Auditoria</button>
   <img src="./assets/Administrativo/realizarAuditoriaVer.svg" class="botonImagen3">
+
+  <button type="button" class="btn btn-info botonFiltrar" (click)="abrirFiltro()">Filtrar</button>
+  <img src="./assets/vector.svg" class="botonImagen2" alt="Filtrar">
 
 </div>
 
