--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -11,11 +11,6 @@
       <a class="nav-link d-flex flex-column"><img class="imgMenu" src="./assets/Gestor/crearGruas.svg" alt=""><span>Crear Grua</span></a><br>
       <a class="nav-link d-flex flex-column"><img class="imgMenu" src="./assets/Gestor/crearPatio.png" alt=""><span>Crear Patio</span></a><br>
       <a class="nav-link d-flex flex-column" routerLink="gestionar-gruas"><img class="imgMenu" src="./assets/Gestor/gestionarGruas.svg" alt=""><span>Gestionar Gruas</span></a><br>
-
-      <a class="home" (click)="logout()">
-        <img src="./assets/home.svg" alt="Cerrar sesión">
-      </a>
-
     </div>
 
   </div>
@@ -25,14 +20,17 @@
     <a routerLink="/perfil-ordenador">
     <img class="perfil" src="./assets/Administrativo/perfil.svg" alt="">
     </a>
-    <a class="nav-link d-flex flex-column" routerLink="crear-orden"><img class="primeraImg imgMenu" src="./assets/Administrativo/crearOrden.svg" alt=""><span>Crear Orden</span></a><br>
-    <a class="nav-link d-flex flex-column" routerLink="crear-turno"><img class="imgMenu" src="./assets/Administrativo/crearTurno.svg" alt=""></a><br>
-    <a class="nav-link d-flex flex-column" routerLink="monitorizar-orden"><img class="imgMenu" src="./assets/Administrativo/monitorizarOrden.svg" alt=""></a><br>
-    <a class="nav-link d-flex flex-column" routerLink="buscar-contenedor"><img class="imgMenu" src="./assets/Administrativo/buscarContenedor.svg" alt=""></a><br>
-    <a class="nav-link d-flex flex-column" routerLink="realizar-auditoria"><img class="imgMenu" src="./assets/Administrativo/realizarAuditoria.svg" alt=""></a><br>
-    <a class="nav-link d-flex flex-column" routerLink="incidencias"><img class="imgMenu" src="./assets/Administrativo/incidencias.svg" alt=""></a><br>
+    <a class="nav-link d-flex flex-column" routerLink="crear-orden"><img class="primeraImg imgMenu" src="./assets/Administrativo/crearOrden.png" alt=""><span>Crear Orden</span></a><br>
+    <a class="nav-link d-flex flex-column" routerLink="crear-turno"><img class="imgMenu" src="./assets/Administrativo/crearTurno.png" alt=""><span>Crear Turno</span></a><br>
+    <a class="nav-link d-flex flex-column" routerLink="monitorizar-orden"><img class="imgMenu" src="./assets/Administrativo/monitorizarOrden.png" alt=""><span>Monitorizar Orden</span></a><br>
+    <a class="nav-link d-flex flex-column" routerLink="buscar-contenedor"><img class="imgMenu" src="./assets/Administrativo/buscarContenedor.png" alt=""><span>Buscar Contenedor</span></a><br>
+    <a class="nav-link d-flex flex-column" routerLink="realizar-auditoria"><img class="imgMenu" src="./assets/Administrativo/realizarAuditoria.png" alt=""><span>Realizar Auditoria</span></a><br>
+    <a class="nav-link d-flex flex-column" routerLink="incidencias"><img class="imgMenu" src="./assets/Administrativo/incidencias.png" alt=""><span>Incidencias</span></a><br>
   </div>
 }
 
+<a class="home" (click)="logout()">
+  <img src="./assets/home.svg" alt="Cerrar sesión">
+</a>
 
 
