--- a/src/app/administrativo/incidencias/incidencias.component.css
+++ b/src/app/administrativo/incidencias/incidencias.component.css
@@ -68,7 +68,6 @@ table tr {
   vertical-align: middle;
   margin-left: 10px;
   margin-top: 60px;
-  margin-bottom: 80px;
 }
 
 .imgPag {
@@ -79,15 +78,58 @@ table tr {
   display: inline-block;
   vertical-align: middle;
   margin-top: 30px;
-  margin-bottom: 40px;
+  margin-bottom: -10px;
 }
 
 .contenedor-tabla {
   max-height: 600px;
   margin: 0 auto;
-  margin-left: 200px;
+  margin-left: 300px;
   width: 1200px;
   margin-top: 6%;
+}
+
+.crearNuevo {
+  display: flex;
+  margin-left: 460px;
+  margin-bottom: -125px;
+  margin-top: 6%;
+}
+
+.botonFiltrar{
+
+  display: flex;
+  padding-left: 39px;
+  align-items: center;
+  width: 110px;
+  height: 35px;
+  border-radius: 4px;
+  border: 2px solid #000;
+  background: rgba(217, 217, 217, 0);
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.5);
+  z-index: 1;
+  margin-left: 930px;
+  color: #000;
+  text-align: center;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+
+}
+
+.botonFiltrar:hover {
+  border-radius: 4px;
+  border: 2px solid rgba(0, 0, 0, 0.5);
+  background: rgba(217, 217, 217, 0);
+  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0.5);
+}
+.botonImagen2 {
+  width: 25px;
+  height: 25px;
+  flex-shrink: 0;
+  margin-top: 9px;
+  margin-left: -100px;
 }
 
 .dataTables_scrollBody thead tr {
@@ -98,23 +140,11 @@ table tr {
   margin-top: -10px;
 }
 
-.dt-search {
-  width: 300px !important;
-  padding: 8px !important;
-
-  border-radius: 4px !important;
-  font-size: 1em !important;
-}
-
-.dt-layout {
-  text-align: center;
-}
-
 .dataTables_scrollBody {
   margin-top: -10px;
 }
 
-.dt-scroll-head > .dt-scroll-headInner > table > thead > tr > th {
+::ng-deep .dt-scroll-head > .dt-scroll-headInner > table > thead > tr > th {
   background-color: #152d65;
   width: 1477px;
   height: 80px;
@@ -128,7 +158,7 @@ table tr {
   position: sticky;
 }
 
-.dt-scroll > .dt-scroll-body > table > tbody > tr > td {
+::ng-deep .dt-scroll > .dt-scroll-body > table > tbody > tr > td {
   text-align: center;
   font-size: 20px;
   border-bottom: solid 10px var(--Cinder-50, #f1f5fe);
@@ -217,4 +247,145 @@ table tr {
 }
 ::ng-deep .swal2-confirm {
   background: var(--Cinder-900, #152D65);
+}
+
+
+::ng-deep .dt-scroll-head > .dt-scroll-headInner > table > thead > tr > th {
+  background-color: #152d65;
+  width: 1477px;
+  height: 80px;
+  color: var(--Cinder-50, #f1f5fe);
+  text-align: center;
+  font-size: 23px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  padding: 20px;
+  position: sticky;
+}
+
+::ng-deep .dt-scroll > .dt-scroll-body > table > tbody > tr > td {
+  text-align: center;
+  font-size: 20px;
+  border-bottom: solid 10px var(--Cinder-50, #f1f5fe);
+  padding: 25px;
+}
+
+::ng-deep .dt-scroll > .dt-scroll-body > table > tbody > tr > td > .select-checkbox {
+  margin-left: 25px;
+  margin-right: 105px;
+}
+
+::ng-deep div.dt-search {
+  width: 270px !important;
+  padding: 8px !important;
+  border-radius: 4px !important;
+  font-size: 1em !important;
+  margin-top: -32px;;
+  margin-right: 125px;
+  /* border: 2px solid #000; */
+
+}
+
+::ng-deep div.dt-search input {
+  width: 100% !important;
+  padding: 8px !important;
+  border-radius: 4px !important;
+  font-size: 20px !important;
+  border: 2px solid #000 !important;
+  height: 36px !important;
+  font-weight: 700;
+  color: #000 !important;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.5);
+  background-image: url('/assets/lupa.svg') !important;
+  background-repeat: no-repeat;
+  background-position: left 10px center !important; /* Adjust the position of the icon */
+}
+
+::ng-deep input#dt-search-0.dt-input {
+
+  text-align: center;
+
+}
+
+/* Filtro */
+::ng-deep .mi-popup2 {
+
+  border-radius: 32px;
+  border: 2px solid #000;
+  width: 500px;
+  background: #FFFCFC;
+
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.50);
+
+} 
+
+::ng-deep .misCosas {
+
+  margin-top: 40px;
+  text-align: left;
+  
+}
+
+::ng-deep .misCosas > label {
+
+  color:  var(--Cinder-900, #152D65) ;
+  margin-left: 40px;
+  color: var(--Cinder-900, #152D65);
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+
+}
+
+::ng-deep .misCosas > .swal2-select {
+
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    background: url('/assets/flecha.svg') no-repeat calc(100% - 3%) var(--Cinder-100, #E3E9FB) !important;
+    border: none;
+    font-size: 1.2rem;
+    display: flex;
+    width: 227px;
+    height: 49px;
+    padding-left: 2%;
+    justify-content: flex-end;
+    align-items: center;
+    flex-shrink: 0;
+
+}
+
+::ng-deep .mi-titulo2 {
+  color: var(--Cinder-950, #040813);
+  border-bottom: solid 2px black;
+
+  padding-bottom: 4%;
+  margin-bottom: -4%;
+
+  text-align: left;
+}
+
+::ng-deep .mi-boton2 {
+  width: 370px;
+
+  border-radius: 4px;
+  border: 2px solid var(--Cinder-900, #152D65);
+  background: var(--Cinder-900, #152D65);
+  box-shadow: 3px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  color: var(--Cinder-50, #F1F5FE);
+  text-align: center;
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+
+::ng-deep .mi-cruz{
+
+  color: #040813;
+  margin-right: 40px;
+  padding-top: 27px;
+
 }
